complete till flash

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -66,10 +66,9 @@ table#movies th, table#movies td {
   padding: 4px;
   text-align: left;
 }
-#notice, #warning {
-  background: rosybrown;
-  margin: 1em, 0;
-  padding: 4px;
+.message {
+  color: red;
+  text-align: center;
 }
 form label {
   display: block;
