--- a/app/views/movies/_movie_form.html.haml
+++ b/app/views/movies/_movie_form.html.haml
@@ -1,4 +1,11 @@
 -# in _movie_form.html.haml (the partial)
+- if @movie && !@movie.errors.empty?
+  #warning
+    Errors prevented this movie from being #{controller.action_name}d:
+    %ul
+      - @movie.errors.full_messages.each do |error|
+        %li= error
+
 = label :movie, :title, 'Title'
 = text_field :movie, 'title'
 
