add third party authentication

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,4 +12,5 @@
     - elsif flash[:warning]
       #warning.message= flash[:warning]
     #main
+      = render partial: 'session/login_form'
       = yield
