--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -12,6 +12,8 @@
 
 %p#description= @movie.description
 
+= link_to 'Add Review', new_movie_review_path(@movie)
+%br
 = link_to 'Edit info', edit_movie_path(@movie)
 %br
 = link_to 'Delete', movie_path(@movie), method: :delete
